--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .grid {
   position: absolute;
-  width: 600px;
+  width: 570px;
   height: 300px;
   border: solid red 1px;
 }
@@ -10,6 +10,15 @@
   width: 100px;
   height: 20px;
   background-color: aquamarine;
+  /* left: 50px;
+  bottom: 50px; */
+}
+
+.controller {
+  position: absolute;
+  width: 100px;
+  height: 20px;
+  background-color: green;
   /* left: 50px;
   bottom: 50px; */
 }
