added ball and fixed controller block movement

--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@
   /* left: 50px;
   bottom: 50px; */
 }
+
+.ball {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: yellow;
+  border-radius: 10px;
+}
